// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabContainerList /> should render the component with activeTab set as 1 1`] = `
<Fragment>
  <HorizontalTabContainerStyled
    key="ComposedHorizontalTabContainer-history"
  >
    history
  </HorizontalTabContainerStyled>
</Fragment>
`;

exports[`<TabContainerList /> should render the component with the default props 1`] = `
<Fragment>
  <HorizontalTabContainerStyled
    key="ComposedHorizontalTabContainer-forecast"
  >
    forecast
  </HorizontalTabContainerStyled>
</Fragment>
`;
